# StudentCounsellorAI

./: .dockerignore  CLI_MODE_GUIDE.md  Dockerfile  IMPLEMENTATION_GUIDE.md  README.md  __init__.py  client.py  env.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
openenv_student_counsellor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: __init__.py  app.py  student_counsellor_environment.py
